--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
 }
 
@@ -23,9 +23,18 @@ body {
     padding: 10px;
 }
 
-.appNewDesc h3 {
+.appNewDesc h2,
+.appNewDesc h4 {
     font-weight: bold;
-    padding-bottom: 8px;
+    padding-bottom: 10px;
+}
+
+.newText1 {
+    color: rgb(255, 190, 0);
+}
+
+.newText2 {
+    color: rgb(0, 190, 255);
 }
 
 .appMap {
