--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ body {
     background-color: rgb(5, 5, 60);
 }
 
+a {
+    text-decoration: none;
+}
+
 .appInfo {
     padding: 30px 0px;
     color: white;
@@ -52,7 +56,8 @@ body {
 }
 
 svg {
-    height: 90vh;
+    width: 100%;
+    height: 85vh;
 }
 
 path {
@@ -65,5 +70,5 @@ path {
 path:hover {
     fill: rgb(255, 190, 0);
     filter: drop-shadow(0px 0px 6px rgb(255, 255, 255, 0.8));
-    transform: translate(-6px, -6px);
+    transform: translate(-6px, 3px);
 }
